[gd_scene load_steps=14 format=2]

[ext_resource path="res://script/alertaMsg.gd" type="Script" id=1]
[ext_resource path="res://font/Montserrat-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://font/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://recursos/ventana0.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=21]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=22]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=23]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.952941, 0.454902, 0.192157, 1 )
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.133333, 0.133333, 0.180392, 1 )
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.952941, 0.454902, 0.192157, 1 )
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.952941, 0.454902, 0.192157, 1 )
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.257813, 0.257813, 0.257813, 1 )
corner_radius_bottom_right = 20

[node name="alertaMsg" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = -122.0
margin_right = 224.5
margin_bottom = 122.0
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
margin_left = 25.0
margin_top = 20.0
margin_right = 426.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 21 )
text = "Flying Saucer Game"
align = 1
valign = 1

[node name="message" type="Label" parent="."]
margin_left = 37.0
margin_top = 69.0
margin_right = 414.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 22 )
text = "Â¡Instala ahora este emocionante juego y recibe 100 monedas de inmediato!"
align = 1
valign = 1
autowrap = true

[node name="btnMasTarde" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -224.5
margin_top = -57.0
margin_right = 0.5
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 28 )
custom_styles/focus = SubResource( 28 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 25 )
text = "LATER"

[node name="btnIrAhora" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 0.5
margin_top = -57.0
margin_right = 225.5
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 24 )
custom_styles/normal = SubResource( 27 )
text = "GO_NOW"

[connection signal="pressed" from="btnMasTarde" to="." method="_on_btnMasTarde_pressed"]
[connection signal="pressed" from="btnIrAhora" to="." method="_on_btnIrAhora_pressed"]
